--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         <label for="quantity">Quantity:</label>
         <input type="number" name="quantity" id="quantity" min="1" required>
         <br><br>
-        <label for="continue_order">Do you want to continue ordering?</label>
+        <label for="continue_order">Do you want to continue ordering? (yes/no)</label>
         <input type="text" name="continue_order" id="continue_order" required>
         <br><br>
         <label for="name">Name:</label>
