added the ID verification message

--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -18,6 +18,8 @@
     <p>Quantity: {{ quantity }}</p>
     <p>Total: ${{ total }}</p>
     <hr>
+    <p>Your ID is currently under verification. Once we verify your age and ID, we will contact you soon.</p>
     <p>Thank you for shopping with us. Goodbye!</p>
 </body>
 </html>
+
