Added a reset button

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
         <input type="text" name="id_number" id="id_number" required>
         <br><br>
         <input type="submit" value="Place Order">
+        <input type="reset" value="Reset">
     </form>
 </body>
 </html>
