--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/templates/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/CSS/style.css">
     <title>Liquor Store Menu</title>
 </head>
 <body>
