--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-    max-width: 500px;
+    width: 50%;
     margin: 0 auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
