--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,9 +1,9 @@
 body {
-    background-color: #f2f2f2;
+    background: url('../images/background.jpg') no-repeat right center;
 }
 
 .container {
-    width: 50%;
+    width: 100%;
     margin: 0 auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
