--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -35,11 +35,11 @@ textarea {
 }
 
 select {
-    width: 50%; 
+    width: 100%; 
     margin: 0 auto; 
     padding: 8px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     border-radius: 4px;
     box-sizing: border-box;
     appearance: none;
