--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #fff;
     border-radius: 10px;
 }
 
