--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ccc;
+    background-color: #777;
 }
 
 .container {
@@ -13,6 +13,7 @@ body {
 h1, h2 {
     text-align: center;
     color: #333;
+    text-decoration: underline;
 }
 
 label {
@@ -20,31 +21,26 @@ label {
     margin-bottom: 5px;
     font-size: 16px;
     color: #333;
+    font-weight: bold;
 }
 
 input[type="number"],
 input[type="text"],
 input[type="tel"],
-textarea {
-    width: 100%;
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
+textarea,
 select {
-    width: 100%; 
-    margin: 0 auto; 
+    width: 100%;
     padding: 8px;
     font-size: 14px;
     border: 1px solid #fff;
     border-radius: 4px;
     box-sizing: border-box;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    background-color: #fff;
+    font-weight: bold;
+    text-align: center;
+}
+
+select {
     background: url('arrow.png') no-repeat right center;
     background-size: 12px;
 }
@@ -65,6 +61,7 @@ input[type="reset"] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 input[type="submit"]:hover,
@@ -81,10 +78,14 @@ input[type="reset"]:focus {
     color: #ff0000;
     font-size: 14px;
     margin-top: 5px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .success {
     color: #008000;
     font-size: 14px;
     margin-top: 5px;
+    font-weight: bold;
+    text-align: center;
 }
