--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #777;
+    background-color: #a78181;
 }
 
 .container {
@@ -12,7 +12,7 @@ body {
 
 h1, h2 {
     text-align: center;
-    color: #333;
+    color: #fff;
     text-decoration: underline;
 }
 
@@ -20,8 +20,9 @@ label {
     display: block;
     margin-bottom: 5px;
     font-size: 16px;
-    color: #333;
+    color: #fff;
     font-weight: bold;
+    text-align: center;
 }
 
 input[type="number"],
@@ -38,11 +39,13 @@ select {
     background-color: #fff;
     font-weight: bold;
     text-align: center;
+    color: #e4e1e1;
 }
 
 select {
     background: url('arrow.png') no-repeat right center;
     background-size: 12px;
+    color: #e4e1e1;
 }
 
 textarea {
