--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -40,7 +40,7 @@ select {
     background-color: #000;
     font-weight: bold;
     text-align: center;
-    color: #000;
+    color: #fdfdfd;
 }
 
 select {
