--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -34,13 +34,13 @@ select {
     width: 100%;
     padding: 8px;
     font-size: 14px;
-    border: 1px solid #000;
+    border: 1px solid #fff;
     border-radius: 4px;
     box-sizing: border-box;
-    background-color: #000;
+    background-color: #fff;
     font-weight: bold;
     text-align: center;
-    color: #fdfdfd;
+    color: #000;
 }
 
 select {
